# encoder-fast-eval

./: .gitignore  LICENSE  README.md  analyze_results.py  encoder_eval.py  pyproject.toml
examples/: minimal.yaml  turkish.yaml
scripts/: run_modal.py
