[project]
name = "encoder-fast-eval"
version = "0.1.0"
description = "Fast evaluation of encoder models on NLP tasks by freezing base parameters and training only classification heads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seqeval>=1.2.2",
    "transformers>=4.57.1",
]
