[project]
name = "encoder-fast-eval"
version = "0.1.0"
description = "Evaluation of encoder models on NLP tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seqeval>=1.2.2",
    "transformers>=4.57.1",
    "openpyxl>=3.1.5",
    "torch==2.8.*",
    "flash-attn==2.8.3",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }